<resources>

    <!--    General-->
    <string name="app_name">Smash Here</string>
    <string name="toolbar_HomeScreen">Fighters</string>
    <string name="toolbar_ATsScreen">Advanced Techniques</string>
    <string name="toolbar_SettingsScreen">Settings</string>
    <string name="searchView_text">Search for a Smash Bros character...</string>
    <string name="app_version">Version : 1.0.0</string>
    <string name="neutral_state">Neutral</string>
    <string name="advantage_state">Advantage</string>
    <string name="desadvantage_state">Desadvantage</string>
    <string name="match_ups">Match Ups</string>
<!--    Icons-->
    <string name="home_icon">Home</string>
    <string name="advanced_techniques_icon">Avdanced techniques</string>
    <string name="settings_icon">Settings</string>

    <!--    Page Settings-->
    <string name="languages_title_section">Languages</string>
    <string name="themes_title_section">Themes</string>
    <string name="about_title_section">About</string>

    <!--    Fighters-->
    <string name="alph">Alph</string>
    <string name="banjo">Banjo</string>
    <string name="bayonetta">Bayonetta</string>
    <string name="bowser">Bowser</string>
    <string name="bowser_jr">Bowser Jr</string>
    <string name="brawler">Brawler</string>
    <string name="byleth">Byleth</string>
    <string name="captain_falcon">Captain Falcon</string>
    <string name="charizard">Charizard</string>
    <string name="chrom">Chrom</string>
    <string name="cloud">Cloud</string>
    <string name="corrin">Corrin</string>
    <string name="daisy">Daisy</string>
    <string name="dark_pit">Dark Pit</string>
    <string name="dark_samus">Dark Samus</string>
    <string name="diddy_kong">Diddy Kong</string>
    <string name="donkey_kong">Donkey Kong</string>
    <string name="dr_mario">Dr.Mario</string>
    <string name="falco">Falco</string>
    <string name="fox">Fox</string>
    <string name="ganondorf">Ganondorf</string>
    <string name="mr_game_and_watch">Mr.Game &amp; Watch</string>
    <string name="greninja">Greninja</string>
    <string name="hero">Hero</string>
    <string name="ice_climbers">Ice Climbers</string>
    <string name="ike">Ike</string>
    <string name="incineroar">Incineroar</string>
    <string name="inkling">Inkling</string>
    <string name="isabelle">Isabelle</string>
    <string name="ivysaur">Ivysaur</string>
    <string name="jigglypuff">Jigglypuff</string>
    <string name="joker">Joker</string>
    <string name="kazuya">Kazuya</string>
    <string name="ken">Ken</string>
    <string name="king_dedede">King Dedede</string>
    <string name="king_k_rool">King K Rool</string>
    <string name="kirby">Kirby</string>
    <string name="link">Link</string>
    <string name="little_mac">Little Mac</string>
    <string name="lucario">Lucario</string>
    <string name="lucas">Lucas</string>
    <string name="lucina">Lucina</string>
    <string name="luigi">Luigi</string>
    <string name="mario">Mario</string>
    <string name="marth">Marth</string>
    <string name="megaman">Megaman</string>
    <string name="meta_knight">Meta Knight</string>
    <string name="mewtwo">Mewtwo</string>
    <string name="mii_brawler">Mii Brawler</string>
    <string name="mii_gunner">Mii Gunner</string>
    <string name="mii_swordfighter">Mii Swordfighter</string>
    <string name="minmin">Minmin</string>
    <string name="mythra">Mythra</string>
    <string name="ness">Ness</string>
    <string name="olimar">Olimar</string>
    <string name="pac_man">Pac-man</string>
    <string name="palutena">Palutena</string>
    <string name="peach">Peach</string>
    <string name="pichu">Pichu</string>
    <string name="pikachu">Pikachu</string>
    <string name="piranah_plant">Piranah Plant</string>
    <string name="pit">Pit</string>
    <string name="pokemon_trainer">Pokemon Trainer</string>
    <string name="pyra">Pyra</string>
    <string name="richter">Richter</string>
    <string name="ridley">Ridley</string>
    <string name="rob">R.O.B</string>
    <string name="robin">Robin</string>
    <string name="rosalina">Rosalina</string>
    <string name="roy">Roy</string>
    <string name="ryu">Ryu</string>
    <string name="samus">Samus</string>
    <string name="sephiroth">Sephiroth</string>
    <string name="sheik">Sheik</string>
    <string name="shulk">Shulk</string>
    <string name="simon">Simon</string>
    <string name="snake">Snake</string>
    <string name="sonic">Sonic</string>
    <string name="sora">Sora</string>
    <string name="squirtle">Squirtle</string>
    <string name="steve">Steve</string>
    <string name="terry">Terry</string>
    <string name="toon_link">Toon Link</string>
    <string name="villager">Villager</string>
    <string name="wario">Wario</string>
    <string name="wii_fit_trainer">Wii Fit Trainer</string>
    <string name="wolf">Wolf</string>
    <string name="yoshi">Yoshi</string>
    <string name="young_link">Young Link</string>
    <string name="zelda">Zelda</string>
    <string name="zero_suit_samus">Zero Suit Samus</string>

    <!--    Advanced Techniques TITLES-->
    <string name="ATs_definition">An advanced technique is a set of complex actions that requires technical skill and benefits a character\'s overall gameplay.</string>
    <string name="glossary_btn">Glossary</string>
    <string name="attack_cancel_short_hop_aerial">Attack Cancel Short \n Hop Aerial</string>
    <string name="b_reverse">B Reversing</string>
    <string name="bat_droping">Bat Dropping</string>
    <string name="boost_grab">Boost Grab</string>
    <string name="c_bouncing">C-Bouncing</string>
    <string name="coil">COIL</string>
    <string name="dash_cancel">Dash Cancel</string>
    <string name="dash_dancing">Dash Dancing</string>
    <string name="directional_influence">Directional influence</string>
    <string name="drop_cancel">Drop Cancel</string>
    <string name="edge_dashing">Edge Dashing</string>
    <string name="edge_hoping">Edge Hopping</string>
    <string name="fox_trotting">Fox-Trotting</string>
    <string name="hilldash">Hilldash</string>
    <string name="jab_cancel">Jab Cancel</string>
    <string name="jab_reset">Jab Reset</string>
    <string name="jump_cancel_throw">Jump Cancel Throw</string>
    <string name="jump_cancelling">Jump Cancelling</string>
    <string name="ledge_cancelling">Ledge Cancelling</string>
    <string name="lock">Lock</string>
    <string name="mindgame">Mindgame</string>
    <string name="powershield">Powershield</string>
    <string name="reverse_aerial_rush">Reverse Aerial Rush</string>
    <string name="shield_stop">Shield Stop</string>
    <string name="short_hop_air_airdodge">Short Hop Air Dodge</string>
    <string name="slingshot">Slingshot</string>
    <string name="smash_directional_influence">Smash \n Directional Influence</string>
    <string name="stage_humping">Stage Humping</string>
    <string name="sticky_edge_jump">Sticky Edge Jump</string>
    <string name="taunt_cancelling">Taunt Cancelling</string>
    <string name="teching">Teching</string>
    <string name="tech_chasing">Tech chasing</string>
    <string name="wall_jump_cancel_ledge_grab">Wall Jump Cancel \n Ledge Grab</string>
    <string name="wavedash">Wavedash</string>
    <string name="waveland">Waveland</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>