<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.FighterState">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_FighterStateModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_FighterStateModel"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_FighterStateModel"
                android:text="figherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_FighterStateModel"
                android:src="@drawable/bowserheadssbu"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="20dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

<!--    Neutral-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_neutralState"
        app:cardBackgroundColor="@color/dark_grey"
        android:layout_width="370dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardView_advantageState"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout_FighterStateModel">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:background="@drawable/neutral_state"
                android:backgroundTint="@color/white"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <TextView
                android:text="@string/neutral_state"
                android:fontFamily="@font/circular_std_font_family"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

<!--    Advantage-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_advantageState"
        app:cardBackgroundColor="@color/dark_grey"
        android:layout_width="370dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_neutralState">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:background="@drawable/advantage_state"
                android:backgroundTint="@color/white"
                android:layout_width="100dp"
                android:layout_height="80dp" />
            <TextView
                android:text="@string/advantage_state"
                android:fontFamily="@font/circular_std_font_family"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

<!--    Desadvantage-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_desadvantageState"
        app:cardBackgroundColor="@color/dark_grey"
        android:layout_width="370dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_advantageState">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:background="@drawable/desadvantage_state"
                android:backgroundTint="@color/white"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <TextView
                android:text="@string/desadvantage_state"
                android:fontFamily="@font/circular_std_font_family"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <!--    Match Ups -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_matchUps"
        app:cardBackgroundColor="@color/red"
        android:layout_width="370dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_desadvantageState"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:background="@drawable/match_ups"
                android:backgroundTint="@color/white"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <TextView
                android:text="@string/match_ups"
                android:fontFamily="@font/circular_std_font_family"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>